# ceymail-mission-control

./: .gitignore  Cargo.toml  DEPLOY-PROMPT.md  DEPLOY.md  REPORT.md  context.md  setup.sh
apps/dashboard/: SETUP-WIZARD.md  buf.gen.yaml  next.config.ts  package-lock.json  package.json
apps/dashboard/src/: middleware.ts
apps/dashboard/src/app/: globals.css  layout.tsx
apps/dashboard/src/app/(auth)/: layout.tsx
apps/dashboard/src/app/(auth)/login/: page.tsx
apps/dashboard/src/app/(auth)/setup/: page.tsx
apps/dashboard/src/app/(dashboard)/: layout.tsx  page.tsx
apps/dashboard/src/app/(dashboard)/aliases/: page.tsx
apps/dashboard/src/app/(dashboard)/backup/: page.tsx
apps/dashboard/src/app/(dashboard)/dkim/: page.tsx
apps/dashboard/src/app/(dashboard)/domains/: page.tsx
apps/dashboard/src/app/(dashboard)/install/: page.tsx
apps/dashboard/src/app/(dashboard)/logs/: page.tsx
apps/dashboard/src/app/(dashboard)/queue/: page.tsx
apps/dashboard/src/app/(dashboard)/services/: page.tsx
apps/dashboard/src/app/(dashboard)/settings/: page.tsx
apps/dashboard/src/app/(dashboard)/users/: page.tsx
apps/dashboard/src/app/(dashboard)/webmail/: page.tsx
apps/dashboard/src/app/(welcome)/: layout.tsx
apps/dashboard/src/app/(welcome)/welcome/: page.tsx
apps/dashboard/src/app/api/aliases/: route.ts
apps/dashboard/src/app/api/auth/login/: route.ts
apps/dashboard/src/app/api/auth/logout/: route.ts
apps/dashboard/src/app/api/backup/: route.ts
apps/dashboard/src/app/api/dkim/: route.ts
apps/dashboard/src/app/api/domains/: route.ts
apps/dashboard/src/app/api/logs/: route.ts
apps/dashboard/src/app/api/queue/: route.ts
apps/dashboard/src/app/api/services/: route.ts
apps/dashboard/src/app/api/settings/: route.ts
apps/dashboard/src/app/api/stats/: route.ts
apps/dashboard/src/app/api/users/: route.ts
apps/dashboard/src/app/api/webmail/: route.ts
apps/dashboard/src/components/: providers.tsx  theme-script.tsx
apps/dashboard/src/components/dashboard/: log-tape.tsx  queue-visualizer.tsx  service-card.tsx  service-grid.tsx  system-charts.tsx
apps/dashboard/src/components/install/: install-wizard.tsx  step-tracker.tsx
apps/dashboard/src/components/install/steps/: domain-config.tsx  php-select.tsx  summary.tsx  system-check.tsx
apps/dashboard/src/components/layout/: sidebar.tsx  top-bar.tsx
apps/dashboard/src/components/ui/: error-boundary.tsx  toast-container.tsx
apps/dashboard/src/components/welcome/: welcome-wizard.tsx
apps/dashboard/src/components/welcome/steps/: admin-account.tsx  database-setup.tsx  setup-complete.tsx  welcome-intro.tsx
apps/dashboard/src/lib/: utils.ts
apps/dashboard/src/lib/api/: helpers.ts
apps/dashboard/src/lib/auth/: auth-context.tsx  password.ts  session.ts
apps/dashboard/src/lib/config/: config.ts
apps/dashboard/src/lib/db/: connection.ts
apps/dashboard/src/lib/grpc/: transport.ts
apps/dashboard/src/lib/hooks/: use-aliases.ts  use-backups.ts  use-dkim.ts  use-domains.ts  use-factory-reset.ts  use-install-status.ts  use-logs.ts  use-mail-logs.ts  use-queue.ts  use-services.ts  use-settings.ts  use-stats.ts  use-users.ts  use-webmail.ts
apps/dashboard/src/lib/stores/: app-store.ts  notification-store.ts
crates/mc-actors/: Cargo.toml
crates/mc-actors/src/: lib.rs  log_watcher.rs  queue_monitor.rs  state_manager.rs  stats_collector.rs
crates/mc-core/: Cargo.toml
crates/mc-core/src/: lib.rs
crates/mc-core/src/config/: apache.rs  dovecot.rs  mod.rs  opendkim.rs  parser.rs  postfix.rs  roundcube.rs  spamassassin.rs
crates/mc-core/src/fs/: atomic.rs  backup.rs  mod.rs  permissions.rs
crates/mc-core/src/install/: mod.rs  orchestrator.rs  packages.rs  php.rs
crates/mc-core/src/mail/: dkim.rs  mod.rs  password.rs
crates/mc-core/src/security/: audit.rs  credentials.rs  input.rs  mod.rs
crates/mc-core/src/service/: manager.rs
crates/mc-core/src/system/: dns.rs  mod.rs  queue.rs  stats.rs
crates/mc-daemon/: Cargo.toml  build.rs
crates/mc-daemon/src/: main.rs  server.rs  tls.rs
crates/mc-db/: Cargo.toml
crates/mc-db/src/: lib.rs  models.rs  pool.rs  queries.rs
crates/mc-polkit/: Cargo.toml
crates/mc-polkit/src/: actions.rs  lib.rs  policy.rs
crates/mc-services/: Cargo.toml
crates/mc-services/src/: backup.rs  config.rs  control.rs  dkim.rs  install.rs  lib.rs  logs.rs  permissions.rs  stats.rs  users.rs  webmail.rs
deploy/polkit/: 45-ceymail-mc.rules  com.ceymail.mc.policy
deploy/scripts/: ceymail-apache2-webmail.sh  ceymail-backup.sh  ceymail-nginx-webmail.sh  ceymail-roundcube-db.sh  deploy-dashboard.sh  generate-certs.sh  install-mission-control.sh
deploy/sudoers/: ceymail-mc
deploy/systemd/: ceymail-dashboard.service  ceymail-mc.service
proto/ceymail/v1/: backup.proto  common.proto  config.proto  control.proto  dkim.proto  install.proto  logs.proto  services.proto  stats.proto  users.proto  webmail.proto
script-mc-was-built-on/ceymail-3.4/: LICENSE  README  ceymail.sh  install.sh  update.sh
(+18 files in other folders)
