[workspace]
resolver = "2"
members = [
    "crates/mc-daemon",
    "crates/mc-services",
    "crates/mc-core",
    "crates/mc-db",
    "crates/mc-actors",
    "crates/mc-polkit",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Proprietary"
authors = ["Derrick S K Siawor <derrick@derkonline.com>"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# gRPC (tonic 0.12+ requires matching tonic-web version)
tonic = { version = "0.12", features = ["tls"] }
tonic-web = "0.12"
tonic-build = "0.12"
tonic-health = "0.12"
prost = "0.13"
prost-types = "0.13"
# Note: tonic 0.14.x is latest but 0.12.x is stable and well-tested.
# All tonic/tonic-web/tonic-build versions MUST match (same monorepo).

# TLS
rustls = "0.23"
rcgen = "0.13"
rustls-pemfile = "2"
tokio-rustls = "0.26"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "mysql", "migrate", "chrono", "json"] }

# Config parsing
nom = "7"

# Security
sha-crypt = "0.5"
bcrypt = "0.16"
age = { version = "0.10", features = ["armor"] }

# System interaction
sysinfo = "0.32"
zbus = "5"
inotify = "0.11"
nix = { version = "0.29", features = ["fs", "user", "process", "signal"] }
tempfile = "3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Archives
flate2 = "1"
tar = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Crypto/random
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
hex = "0.4"

# Regex for input validation
regex = "1"
once_cell = "1"

# Internal crates
mc-core = { path = "crates/mc-core" }
mc-services = { path = "crates/mc-services" }
mc-db = { path = "crates/mc-db" }
mc-actors = { path = "crates/mc-actors" }
mc-polkit = { path = "crates/mc-polkit" }
