[package]
name = "mc-actors"
version.workspace = true
edition.workspace = true

[dependencies]
mc-core = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
inotify = { workspace = true }
sysinfo = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
