[package]
name = "mc-db"
version.workspace = true
edition.workspace = true

[dependencies]
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
